2015-03-04  Roland McGrath  <roland@hack.frob.com>

	* configure.ac (libc_cv_cxx_link_ok): New check.
	Reset CXX to empty if it fails to link.
	* configure: Regenerated.
	* dlfcn/Makefile (tests, modules-names): Add bug-atexit3 and
	bug-atexit3-lib only if $(CXX) is nonempty.
	* nptl/Makefile (tests): Likewise for tst-cancel24.
	(tests, tests-static): Likewise for tst-cancel24-static.
	* debug/Makefile (tests): Likewise for tst-chk4, tst-chk5, tst-chk6,
	tst-lfschk4, tst-lfschk5, and tst-lfschk6.
	* elf/Makefile (tests, modules-names): Likewise for tst-unique3,
	tst-unique3lib, tst-unique3lib2, tst-unique4, and tst-unique4lib.

2015-03-04  Andreas Schwab  <schwab@suse.de>

	[BZ #17631]
	* string/string.h (__CORRECT_ISO_CPP_STRING_H_PROTO): Don't define
	for non-GCC compilers.
	* string/strings.h (__CORRECT_ISO_CPP_STRINGS_H_PROTO):
	Likewise.

2015-03-03 Adhemerval Zanellla  <azanella@linux.vnet.ibm.com>

	[BZ #17776]
	* sysdeps/powerpc/bits/fenvinline.h (feraiseexcept): Convert input to
	integer before bitwise and assembly operations.
	(feclearexcept): Likewise.
	* math/test-fenvinline.c: New file.
	* math/Makefile: Add test-fenvinline test.

2015-03-03  Alan Modra  <amodra@gmail.com>

	[BZ #16512]
	* scripts/localplt.awk: Strip off symbol version.
	* NEWS: Mention bug fix.

2015-03-02  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/pthread/timer_routines.c
	(timer_free_list, thread_free_list, thread_active_list): Make static.

2015-03-02  Joseph Myers  <joseph@codesourcery.com>

	[BZ #17779]
	* sysdeps/unix/sysv/linux/hppa/kernel-features.h
	[__LINUX_KERNEL_VERSION < 0x020625] (__ASSUME_PRLIMIT64):
	Undefine.
	* sysdeps/unix/sysv/linux/microblaze/kernel-features.h
	[__LINUX_KERNEL_VERSION < 0x020625] (__ASSUME_PRLIMIT64):
	Likewise.
	* sysdeps/unix/sysv/linux/sh/kernel-features.h
	[__LINUX_KERNEL_VERSION < 0x020625] (__ASSUME_PRLIMIT64):
	Likewise.

2015-03-02  Paul Pluzhnikov  <ppluzhnikov@google.com>

	[BZ #18036]